# fun-with-sdl3

./: .gitignore  CMakeLists.txt  README.md
proj.android/: settings.gradle
proj.android/app/: build.gradle
proj.android/app/src/androidTest/java/com/maihd/funwithsdl3/android/: ExampleInstrumentedTest.java
proj.android/app/src/main/: AndroidManifest.xml
proj.android/app/src/main/java/com/maihd/funwithsdl3/android/: MainActivity.java
proj.android/app/src/main/res/values/: strings.xml  themes.xml
proj.android/app/src/main/res/values-night/: themes.xml
proj.android/app/src/test/java/com/maihd/funwithsdl3/android/: ExampleUnitTest.java
proj.android/gradle/: libs.versions.toml
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.ios/: Info.plist.in
src/: SDL3_Framework.c  SDL3_Framework.h  main.c
